# Project-4

exampleCode/: pt2.c
src/3way-mpi/mpi100k/: CMakeLists.txt  mpi100.sh  mpi100k.c
src/3way-mpi/mpi1Mil/: CMakeLists.txt  mpi1M.sh  mpi1Mil.c
src/3way-mpi/mpi500k/: CMakeLists.txt  mpi500.sh  mpi500k.c
src/3way-openMP/openMP100k/: CmakeLists  CmakeLists.txt  openMP100k.c  openMP100k.sh
src/3way-openMP/openMP1Mil/: CmakeLists  CmakeLists.txt  openMP1Mil.sh  openMP1mil.c
src/3way-openMP/openMP500k/: CmakeLists  CmakeLists.txt  openMP500k.c  openMP500k.sh
src/3way-pthread/: Makefile  mass_sbatch.sh  pThreads-100k.c  pThreads-1mil.c  pThreads-500k.c  pThreads-sbatch.sh  pThreads.c
src/3way-pthread/pthread100k/: CMakeLists.txt  pthread100.sh  pthread100k.c
src/3way-pthread/pthread1Mil/: CMakeLists.txt  pthread1M.sh  pthread1Mil.c
src/3way-pthread/pthread500k/: CMakeLists.txt  pthread500.sh  pthread500k.c
